<resources>
    <string name="fast_bet">FAST BET</string>
    <string name="D1">1D</string>
    <string name="D2">2D</string>
    <string name="D3">3D</string>
    <string name="top_1d">1D TOP</string>
    <string name="bottom_1d">1D BOTTOM</string>
    <string name="enter_correct_number">请输入正确的号码</string>
    <string name="choice_big_small">请选择大小</string>
    <string name="top_amount">Top 金额</string>
    <string name="infront_amount">Infront 金额</string>
    <string name="bottom_amount">Bottom 金额</string>
    <string name="toproll_amount">Top Roll 金额</string>
    <string name="top_amount_2d">Top 金额</string>
    <string name="top_amount_3d">Top 金额</string>
    <string name="bottom_amount_2d">Bottom 金额</string>
    <string name="toproll_amount_2d">Top Roll 金额</string>
    <string name="toproll_amount_3d">Top Roll 金额</string>
    <string name="infront_amount_3d">Infront 金额</string>
    <string name="bottom_amount_3d">Bottom 金额</string>
    <string name="master_acc">主账号 :</string>
    <string name="saba_yue_money">SABA体育博彩（余额） :</string>
    <string name="saba_noclear_money">SABA体育博彩（未结算金额） :</string>
    <string name="klaspoker_game_money">KlasPoker(余额) :</string>
    <string name="Joker123_game_money">Joker123(余额) :</string>
    <string name="newkeno_game_money">New Keno(余额) :</string>
    <string name="transfer_to_newkeno">请将金额转入NewKeno下注</string>
    <string name="afbcasheu_klaspoker_game_money">Afbcash Poker(余额) :</string>
    <string name="from">从：</string>
    <string name="to">到：</string>
    <string name="write_money">金额：</string>
    <string name="btn_submit">提交</string>
    <string name="transferacc">转账</string>
    <string name="list1_master_acc">主账号</string>
    <string name="list2_saba">SABA体育博彩</string>
    <string name="list2_ib">SBO体育博彩</string>
    <string name="list4_pt">PT Slots</string>
    <string name="list5_klaspoker">KlasPoker</string>
    <string name="money_null">对不起转存金额不能为空</string>
    <string name="choice_again">请从新选择</string>
    <string name="transferacc_list">转账列表</string>
    <string name="All_Markets">所有盘口</string>
    <string name="main_Markets">主要盘口</string>
    <string name="more_Markets">更多玩法盘口</string>
    <string name="withdraw_bonus">红利提款</string>
    <string name="scr888">918kiss</string>
    <string name="regex_password">密码必须包含字母大小写和数字</string>
    <string name="change_passwor_succ">修改密码成功</string>
    <string name="change_passwor_fail">修改密码失败</string>
    <string name="recharge_card">点卡充值</string>
    <string name="recharge_card_num">充值卡号</string>
    <string name="recharge_card_passwrod">充值密码</string>
    <string name="recharge_card_num_error">充值卡号不能为空</string>
    <string name="recharge_card_passwrod_error">充值密码不能为空</string>
    <string name="recharge_card_succeed">充值成功</string>
    <string name="recharge_card_fail">充值失败</string>
    <string name="withdraw_bonus_error">取款红利失败</string>
    <string name="transfer_bouns_error">金额必须大于</string>
    <string name="crash_mail">xiaoshuai@178gaming.com</string>
    <string name="crash_mail_passwd">Nangyangkeji123</string>
    <string name="crash_mail_smtphost">smtp.exmail.qq.com</string>
    <string name="crash_mail_port">465</string>
    <string name="no_records">没有收藏记录</string>
    <string name="update_msg">亲，有新版本，快下载吧！</string>
    <string name="version_update">版本更新</string>
    <string name="update">更新</string>
    <string name="app_update">软件更新</string>
    <string name="later">稍后再说</string>
    <string name="failed_to_login">登录失败</string>
    <string name="invalid_amount_bet">下注数额无效</string>
    <string name="release_to_load_app">释放立即加载</string>
    <string name="release_to_refresh_app">释放立即刷新</string>
    <string name="current_version">当前版本</string>
    <string name="new_version">新版本</string>
    <string name="bet_amount">投注数额:</string>
    <string name="bet_order_number">赌号</string>
    <string name="date_time">日期/时间</string>
    <string name="game_type">游戏类型</string>
    <string name="est_payout">估计可赢额</string>
    <string name="confirm_or_not">确定?</string>
    <string name="double_click_exit_application">双击退出应用</string>
    <string name="do_you_bet_again">重新下注?</string>
    <string name="selected_all">全选</string>
    <string name="reverse_selection">反选</string>
    <string name="coming_soon">正在建设中...</string>
    <string name="do_you_want_to_load_main">你希望返回到主站吗</string>
    <string name="encounter">对阵</string>
    <string name="amount">数额</string>
    <string name="sure">确定</string>
    <string name="bet">投注</string>
    <string name="delete">删除</string>
    <string name="date">日期</string>
    <string name="betting_state">投注状况</string>
    <string name="amount_of_effective">有效数额</string>
    <string name="win_or_lose">输/赢</string>
    <string name="commission">佣金</string>
    <string name="match">赛事</string>
    <string name="state">状况</string>
    <string name="result">成绩</string>
    <string name="Running">滚球</string>
    <string name="input_bet_amount_please">请输入下注数额</string>
    <string name="odds">赔率</string>
    <string name="max_bet">最大投注:</string>
    <string name="min_bet">最小投注:</string>
    <string name="connect_server_fail">连接服务器失败</string>
    <string name="clearance_should_be_more_than_three">连串过投注至少需要选择三次或者以上的联赛比赛</string>
    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_cannot_null">密码不能为空</string>
    <string name="username_error">用户名错误</string>
    <string name="password_error">密码错误</string>
    <string name="live_entertainment">真人娱乐城</string>
    <string name="keno">基诺</string>
    <string name="number">数字游戏</string>
    <string name="game">电子游戏</string>
    <string name="tw_game">彩票</string>
    <string name="texas_holdem">德州扑克</string>
    <string name="texas_holdem1">POKER</string>
    <string name="promotions">优惠</string>
    <string name="live_score">Live Score</string>
    <string name="enter">点击进入</string>
    <string name="i_sport_betting">I 体育博彩</string>
    <string name="s_sport_betting">S 体育博彩</string>
    <string name="afb_sport_betting">AFB 体育博彩</string>
    <string name="afb2_sport_betting">AFB2 体育博彩</string>
    <string name="ob_live_entertainment">ALLBET 真人娱乐城</string>
    <string name="gold_live_entertainment">GOLD 真人娱乐城</string>
    <string name="dg_live_entertainment">真人娱乐城5</string>
    <string name="ag_live_entertainment">真人娱乐城7</string>
    <string name="sa_live_entertainment">SA GAMING 真人娱乐</string>
    <string name="afb_live_entertainment">AFB Casino</string>
    <string name="pp_live_entertainment">PP Casino</string>
    <string name="n2_live_entertainment">N2live Casino</string>
    <string name="gd_live_entertainment">GD 真人娱乐</string>
    <string name="indonesia_lottery">彩票</string>
    <string name="live_number">真人数字游戏</string>
    <string name="poker">扑克游戏</string>
    <string name="football">足球</string>
    <string name="other">其他</string>
    <string name="tennis">网球</string>
    <string name="basketball">篮球</string>
    <string name="rugby">橄榄球</string>
    <string name="refresh">刷新</string>
    <string name="menu">菜单</string>
    <string name="collection">收藏</string>
    <string name="clearance">连串过关</string>
    <string name="not_settled">未结算</string>
    <string name="settled">已结算</string>
    <string name="selected_compared">选择联赛</string>
    <string name="sort_by_time">时间排序</string>
    <string name="end_push">推送结算</string>
    <string name="score_push">比分推送</string>
    <string name="not_started"> </string>
    <string name="min">分钟</string>
    <string name="today">今日</string>
    <string name="early">早盘</string>
    <string name="games">场比赛</string>
    <string name="present">目前</string>
    <string name="matchs">对阵</string>
    <string name="full_half_court_hdp">全场让球&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;全场大小</string>
    <string name="full_half_court_ou">半场让球&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;半场大小</string>
    <string name="scaleplate_asianplate">  标盘/亚盘  </string>
    <string name="correct_score">  波胆  </string>
    <string name="back">返回</string>
    <string name="full_time">全场</string>
    <string name="half_time">半场</string>
    <string name="home_and_away">主和客</string>
    <string name="double_chance">双重机会</string>
    <string name="half_full_time">半场/全场</string>
    <string name="first_last_goal">首次进球/最后进球</string>
    <string name="total_goals">总共进球</string>
    <string name="correct_full">波胆全场 </string>
    <string name="correct_half">波胆半场</string>
    <string name="mix_parlay">连串过关</string>
    <string name="no_data">当前没有任何数据</string>
    <string name="pull_down_to_load_previous">下拉加载上一页</string>
    <string name="pull_down_to_refresh">下拉刷新</string>
    <string name="not_allowed_to_bet">目前不允许下注</string>
    <string name="edit">编辑</string>
    <string name="betting_terms">投注项:</string>
    <string name="win">Win</string>
    <string name="cancel">取消</string>
    <string name="draw">和</string>
    <string name="odd">单</string>
    <string name="even">双</string>
    <string name="x1">主和</string>
    <string name="x12">主客</string>
    <string name="x2">客和</string>
    <string name="last_goal">最后得分</string>
    <string name="no_goal">无得分</string>
    <string name="under">小</string>
    <string name="over">大</string>
    <string name="Input_the_amount_of_bets_please">请填写下注金额！</string>
    <string name="odd_even">单/双</string>
    <string name="first_goal">最先得分</string>
    <string name="h1">主</string>
    <string name="dx">和</string>
    <string name="a2">客</string>
    <string name="against">对阵</string>
    <string name="hh">主主</string>
    <string name="hd">主和</string>
    <string name="ha">主客</string>
    <string name="dh">和主</string>
    <string name="dd">和和</string>
    <string name="da">和客</string>
    <string name="ah">客主</string>
    <string name="ad">客和</string>
    <string name="aa">客客</string>
    <string name="statement">账目</string>
    <string name="event">状况</string>
    <string name="detail">成绩</string>
    <string name="caipiao">彩票(SINGAPORE)</string>
    <string name="shengxiao">生肖</string>
    <string name="colok">COLOK</string>
    <string name="alternate">交叉</string>
    <string name="speailpeilv">特殊赔率</string>
    <string name="number_lottery">号码</string>
    <string name="amount_lottery">金额</string>
    <string name="net_amount">实际金额</string>
    <string name="shenxiao">生肖</string>
    <string name="bianhao">编号</string>
    <string name="riqi">日期</string>
    <string name="guojia">地区</string>
    <string name="qihao">期号</string>
    <string name="mingchen">名称</string>
    <string name="wanfa">玩法</string>
    <string name="sorrynodata">对不起，没有发现记录！</string>
    <string name="youxi">游戏</string>
    <string name="kaijiangtime">开奖时间</string>
    <string name="jieguo">结果</string>
    <string name="nojilu">对不起，没有发现记录！</string>
    <string name="no">类型：</string>
    <string name="youxitype">游戏类型:</string>
    <string name="youxitype1">游戏类型</string>
    <string name="youxi1">游戏：</string>
    <string name="wanfa1">玩法：</string>
    <string name="haoma1">号码：</string>
    <string name="peilv1">赔率：</string>
    <string name="youhui1">优惠：</string>
    <string name="xiazhujine">下注金额</string>
    <string name="qihao1">期号：</string>
    <string name="xiazhushijian">下注时间：</string>
    <string name="discount">优惠</string>
    <string name="zodiapeilv">赔率</string>
    <string name="country_area1">国家/地区</string>
    <string name="THANK_YOU">THANK YOU</string>
    <string name="Dear_Valued_Customer">Dear Valued Customer:</string>
    <string name="welcome_world">Thank you for joining AFB and welcome to betting world.</string>
    <string name="We_proudly">We proudly provide numerous of betting gaming compare to other betting site and will try the best to serve our customer</string>
    <string name="CLICK_HERE">CLICK HERE TO DEPOSIT PAGE NOW</string>
</resources>