<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:background="@color/title_bg_color"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/bianhao"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/riqi"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guojia"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/qihao"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/mingchen"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/wanfa"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/zodiapeilv"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/discount"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="Kei"
            android:textColor="@color/white"
            android:textSize="13dip" />

    </LinearLayout>

    <ListView
        android:id="@+id/special_bet_list_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"

        ></ListView>

    <TextView
        android:id="@+id/special_no_record_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/sorrynodata"
        android:visibility="visible" />
</LinearLayout>
