<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"

        />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="50dip"
               android:background="#eeeeee"
               android:orientation="horizontal"
               android:weightSum="6"
               >
               <TextView
                   android:layout_width="0dip"
                   android:layout_height="match_parent"
                   android:layout_weight="0.5"
                   android:gravity="center"
                   android:text="@string/bianhao"
                   />
               <TextView
                   android:layout_width="0dip"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:text="@string/game_type"
                   />
               <TextView
                   android:layout_width="0dip"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:text="@string/game"
                   />
               <TextView
                   android:layout_width="0dip"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:text="@string/qihao"
                   />
               <TextView
                   android:layout_width="0dip"
                   android:layout_height="match_parent"
                   android:layout_weight="1.3"
                   android:gravity="center"
                   android:text="@string/riqi"
                   />
               <TextView
                   android:layout_width="0dip"
                   android:layout_height="match_parent"
                   android:layout_weight="1.2"
                   android:gravity="center"
                   android:text="@string/jieguo"
                   />

           </LinearLayout>

           <ListView
               android:id="@+id/list_result"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:divider="@null"
               android:dividerHeight="5dip"
               >
           </ListView>
           <TextView
               android:id="@+id/tv_nodata"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dip"
               android:gravity="center"
               android:text="暂无数据"
               android:visibility="gone"
               />
       </LinearLayout>




</LinearLayout>