<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#cc3433"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="NO"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/youxitype1"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/country_area1"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/number_lottery"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wanfa"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zodiapeilv"
            android:textColor="@color/white"
            android:textSize="10dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_hotNumber"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"></ListView>
</LinearLayout>