<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vs_row_head_ll"
    style="@style/style_match_wrap"
    android:background="@color/listView_bg"
    android:orientation="vertical">
        <View
            style="@style/line_horizontal_grey1"/>
        <TextView
            android:id="@+id/vs_header_module_title_tv"
            style="@style/text_match_black12"
            android:background="@color/vs_3_choice"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_and_away"
            android:textColor="@color/vs_time"
            android:textSize="12sp"/>
        <LinearLayout
            android:id="@+id/vs_row_head_second_ll"
            style="@style/style_match_wrap"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/vs_header_left_title_tv"
                style="@style/style_weight_horizontal"
                android:gravity="center"
                android:text="@string/encounter"
                android:textColor="@color/black_grey"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/vs_header_center_title_tv"
                style="@style/style_weight_horizontal"
                android:gravity="center"
                android:text="@string/full_time"
                android:textColor="@color/black_grey"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/vs_header_right_title_tv"
                style="@style/style_weight_horizontal"
                android:gravity="center"
                android:text="@string/half_time"
                android:textColor="@color/black_grey"
                android:textSize="10sp"/>
            </LinearLayout>
</LinearLayout>